# conwrt

./: .coverage  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.example.toml  conwrt-flash.sh  go.mod  llms-full.txt  llms.txt  pyproject.toml  requirements.txt  use-case-matrix.html
docs/: POE_PARITY.md  architecture-analysis.md  contextvm-hardware-migration.md  contextvm-test-plan.md  design-ops-pipeline.md  device-recovery-status.md  europa-vpn-deployment.md  fieldlab-roadmap.md  fieldlab.md  final-test-report.md  getting-started.html  gotchas.md  handoff-session-2026-07-03.md  index.html  mptcp-test-plan.md  openwrt-version-compat.md  process.md  redaction.md  refactoring-plan.md  research-device-management.md  serial-console.md  serial-integration-plan.md  shc-test-plan.md  standards-compliance-audit.md  test-plan-8h.md  test-session-summary.md  testing-status.md  user-stories.html  version-testing-strategy.md  virtual-testing-plan.md  vpn-payment-architecture.md  wizard-bundle.json  wizard.html  zycast.md
examples/: findings.json  redacted-step-output.md  run-metadata.json  wireguard-management.example.conf
firmware/: extract.sh  gs1900fw.py
models/: asus-lyra-map-ac2200.json  comfast-cf-wr632ax.json  dlink-covr-x1860-a1.json  extreme-networks-ws-ap3915i.json  glinet-gl-ar150.json  glinet-gl-ar300m-lite.json  glinet-gl-ar300m-nand.json  glinet-gl-ar300m-nor.json  glinet-mt3000.json  glinet-mt6000.json  linksys-mx4200-v1.json  linksys-whw03-v1.json  linksys-whw03-v2.json  ubnt-edgerouter-6p.json  ubnt-edgerouter-x.json  virtual-x86-64.json  zyxel-ex5700-telenor.json  zyxel-gs1900-24e.json  zyxel-gs1900-8hp-a1.json  zyxel-gs1900-8hp-b1.json  zyxel-gs1920-24.json  zyxel-nr7101.json  zyxel-wx5600-t0.json
prompts/: serial-01-connect-and-identify.md  serial-02-bootloader-explore.md  serial-03-backup.md  serial-04-flash.md  serial-05-configure.md  serial-06-flash.md  step-01-identify-device.md  step-02-fingerprint-surface.md  step-03-plan-capture.md  step-04-analyze-artifacts.md
recipes/: README.md  switch-initiated-flash.md
schemas/: model.schema.json  next-step-input.schema.json  run-metadata.schema.json  step-findings.schema.json  target-device-candidate.schema.json
scripts/: auto-flash.py  auto_detect.py  build_ipk.sh  change-stock-ip.py  checksum_utils.py  commit-run.sh  config.py  configure-stock-switch.py  conwrt-openwrt-install.sh  conwrt.py  conwrt_tui.py  derive_device_secret.py  device_detect.py  dlink_sge_sign.py  extreme_ap391x_analyze.py  failsafe-watch.py  fieldlab.py  fips_identity.py  firmware-manager.py  generate_matrix.py  generate_nostr_keypair.py  generate_site.py  gs1920-repack-firmware.py  gs1920-validate-zynos-openwrt.py  init-run.sh  inventory.py  lldp.py  mac_hash.py  model_loader.py  model_match.py  nodns-bridge-install.sh  nostr_fetch.py  openwrt-requirements.txt  oui.py  platform_utils.py  probe_utils.py  redact-allowlist.txt  redact-output.sh  router-fingerprint.py  router-probe.py  (+22 more)
tests/: helpers.py  smoke.sh  test-init-run.bats  test-redact-output.bats  test-validate-findings.bats  test_adguard_ops.py  test_apply_phases.py  test_apply_ubus.py  (+104 more)
(+257 files in other folders)
