[project]
name = "conwrt"
version = "0.1.0"
description = "Safety-first OpenWrt router flashing and device discovery tooling"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.19",
  "pyserial>=3.5",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "pyright>=1.1",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.pyright]
pythonVersion = "3.10"
include = ["scripts", "tests"]
exclude = ["**/__pycache__"]
extraPaths = ["scripts"]
typeCheckingMode = "basic"
reportMissingTypeArgument = false
reportUnusedCallResult = false
reportImplicitStringConcatenation = false
reportMissingImports = false
reportMissingModuleSource = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportArgumentType = false
