[project]
name = "conwrt"
version = "0.1.0"
description = "Safety-first OpenWrt router flashing and device discovery tooling"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.19",
  "pyserial>=3.5",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "pyright>=1.1",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# E9/F63/F7/F82: syntax errors and undefined names (catch broken code).
# F811: redefinition of an unused name (catches accidental shadowing, e.g. an
#       import shadowed by a later local def).
# B:    flake8-bugbear — likely-bug patterns (unused loop vars, raise-without-from).
# Broader style/import-sort/pyupgrade rules (I, UP, full F) are intentionally not
# enabled yet: turning them on repo-wide would churn ~40 files and risk breaking
# intentional re-exports. Tighten incrementally in a dedicated pass.
select = ["E9", "F63", "F7", "F82", "F811", "B"]

[tool.pyright]
pythonVersion = "3.10"
include = ["scripts", "tests"]
exclude = ["**/__pycache__"]
extraPaths = ["scripts"]
typeCheckingMode = "basic"
# The relaxations below are intentional for this codebase and should stay off:
#   reportMissingImports / reportMissingModuleSource: optional runtime deps
#     (scapy, sshpass, etc.) and hyphenated modules loaded via importlib are not
#     statically resolvable; enabling these produces false positives.
#   reportOptional*/reportAttributeAccessIssue/reportArgumentType: the flash
#     state machine carries dynamic SimpleNamespace profiles; strict checks here
#     would be mostly noise. Revisit if profiles become typed dataclasses.
reportMissingTypeArgument = false
reportUnusedCallResult = false
reportImplicitStringConcatenation = false
reportMissingImports = false
reportMissingModuleSource = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportArgumentType = false
